# komma

./: README.md  conda.yml  makefile  pyproject.toml  setup.py
config/: baseline.toml  model.toml
da-en/: test.txt
data/: convert.py  train.txt  val.txt
komma/: data.py  model.py
wandb/: latest-run
wandb/run-20220903_174436-kjwtwjek/: run-kjwtwjek.wandb
wandb/run-20220903_174436-kjwtwjek/files/: config.yaml  wandb-metadata.json
wandb/run-20220903_200126-36w0itz2/: run-36w0itz2.wandb
wandb/run-20220903_200126-36w0itz2/files/: config.yaml  wandb-metadata.json
wandb/run-20220903_201444-q4iu0imc/: run-q4iu0imc.wandb
wandb/run-20220903_201444-q4iu0imc/files/: conda-environment.yaml  config.yaml  wandb-metadata.json
wandb/run-20220903_201710-3vs9i7fk/: run-3vs9i7fk.wandb
wandb/run-20220903_201710-3vs9i7fk/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20220903_202836-up6iop4s/: run-up6iop4s.wandb
wandb/run-20220903_202836-up6iop4s/files/: config.yaml  wandb-metadata.json
wandb/run-20220903_204308-jkk8dob6/: run-jkk8dob6.wandb
wandb/run-20220903_204308-jkk8dob6/files/: config.yaml  wandb-metadata.json
wandb/run-20220903_210132-a12r70aq/: run-a12r70aq.wandb
wandb/run-20220903_210132-a12r70aq/files/: config.yaml  wandb-metadata.json  wandb-summary.json
