[tool.poetry]
name = "komma"
version = "0.1.0"
description = ""
authors = ["nilq <i.am.niels.nielsen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.12.1"
transformers = "^4.21.2"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
